--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>Phantom Games</title>
 <link rel="canonical" href="https://phantomgames.dev/">
 <meta property="og:title" content="Phantom Games">
-<meta name="description" content="Phantom Games, the BEST place to find fun unblocked games!">
-<meta name="og:description" content="Phantom Games, the BEST place to find fun unblocked games!">
+<meta name="description" content="Phantom Games, the BEST place to find fun unblocked games">
+<meta name="og:description" content="Phantom Games, the BEST place to find fun unblocked games">
 <meta name="keywords" content="phantom games, games, unblocked games, fun, retro bowl, phantomgames, play, cool math game, unblocked game, google games, unblocked 66, run, cool math run, cool math games run, 66 unblocked games, cool math games unblocked 66, run unblocked, run 3 cool math games, youtube unblocked, cool math run 3, run 3, run 3 unblocked games, run 3 unblocked, happy wheels, snake unblocked, happy wheels unblocked, snake, cool math games snake, slope unblocked games, unblocked games happy wheels, slope">
 <meta name="language" content="English">
 <meta name="robots" content="index, follow">
